--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,5 @@
 name: ci-golang-workflow
-on: 
+on:
   pull_request:
     branches:
       - development
@@ -7,6 +7,9 @@ on:
 jobs:
   check-application:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ["1.14", "1.15"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
